# distribution_gen

./: .gitignore  README.md  distribution_gen.py  generate_discord_announcement.py  generate_discord_poll_command.py  generate_discord_results.py  identify_under_three_votes.py  pyproject.toml  requirements.txt  setup.cfg  username_override_map.json
calc_results/: __init__.py  _core.py
calc_results/tests/: test_build_votes_map.py
discord_formatter/: _core.py
fetch_race_lineup/: main.js
fetch_race_results/: main.js
fetch_timestamp/: main.js
hall_of_fame_records/: weekly_results.json
json_poll/: Oka Sho.json  Osaka Hai.json  test_poll.json
live_results/: Oka Sho.json  Osaka Hai.json  Satsuki Sho.json  results.json
race_lineups/: 2026TAKAMATSUNOMIYA_KINEN.json  Oka Sho.json  Osaka Hai.json  Satsuki Sho.json
src/calc_results/: _core.py
src/discord_formatter/: __init__.py  _core.py
src/distribution_gen/: __init__.py  _core.py
